--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,27 @@
 services:
+  front:
+    hostname: front-app
+    build:
+      context: ./front-svelte
+    networks:
+      - back
+    ports:
+      - 5173:5173
+  web-socket:
+    hostname: cable
+    build:
+      context: ./socket-service
+    networks:
+      - back
+    ports:
+      - 8000:8000
+  web-server:
+    image: httpd
+    ports:
+      - 80:80
+    networks:
+      - back
+
+networks:
+  front:
+  back:
